# Copyright 2024 Huawei Technologies Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ============================================================================

action("flatbuffers_install_action") {
  script = "//third_party/flatbuffers/install.py"
  outputs = [
    "${target_gen_dir}/flatbuffers-2.0.0/include/flatbuffers/base.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/code_generators.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/flatbuffers.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/flatc.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/flexbuffers.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/grpc.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/hash.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/idl.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/minireflect.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/pch",
    "${target_gen_dir}/flatbuffers-2.0.0/include/reflection_generated.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/reflection.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/registry.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/stl_emulation.h",
    "${target_gen_dir}/flatbuffers-2.0.0/include/util.h",
  ]
  inputs = [ "//third_party/flatbuffers/v2.0.0.tar.gz" ]
  args = []
  args = [
    "--gen-dir",
    rebase_path("${target_gen_dir}", root_build_dir),
    "--source-dir",
    rebase_path("//third_party/flatbuffers"),
  ]
}
