# Copyright 2024 Huawei Technologies Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ============================================================================
import("//build/ohos.gni")

ohos_source_set("flatbuffers_source") {
  sources = [
    "include/flatbuffers/allocator.h",
    "include/flatbuffers/array.h",
    "include/flatbuffers/base.h",
    "include/flatbuffers/buffer.h",
    "include/flatbuffers/buffer_ref.h",
    "include/flatbuffers/code_generator.h",
    "include/flatbuffers/code_generators.h",
    "include/flatbuffers/default_allocator.h",
    "include/flatbuffers/detached_buffer.h",
    "include/flatbuffers/file_manager.h",
    "include/flatbuffers/flatbuffer_builder.h",
    "include/flatbuffers/flatbuffers.h",
    "include/flatbuffers/flatc.h",
    "include/flatbuffers/flex_flat_util.h",
    "include/flatbuffers/flexbuffers.h",
    "include/flatbuffers/grpc.h",
    "include/flatbuffers/hash.h",
    "include/flatbuffers/idl.h",
    "include/flatbuffers/minireflect.h",
    "include/flatbuffers/reflection.h",
    "include/flatbuffers/reflection_generated.h",
    "include/flatbuffers/registry.h",
    "include/flatbuffers/stl_emulation.h",
    "include/flatbuffers/string.h",
    "include/flatbuffers/struct.h",
    "include/flatbuffers/table.h",
    "include/flatbuffers/util.h",
    "include/flatbuffers/vector.h",
    "include/flatbuffers/vector_downward.h",
    "include/flatbuffers/verifier.h",
  ]
}

ohos_static_library("libflatbuffers_static") {
  deps = [ ":flatbuffers_source" ]
  part_name = "flatbuffers"
  subsystem_name = "thirdparty"
}
