# Copyright 2024 Huawei Technologies Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ============================================================================
import("//build/ohos.gni")

config("flatbuffers_include") {
  include_dirs = [ "./include/" ]
}

ohos_static_library("libflatbuffers_static") {
  part_name = "flatbuffers"
  subsystem_name = "thirdparty"
  public_configs = [ ":flatbuffers_include" ]
}

ohos_copy("flatbuffers_for_cangjie") {
  sources = [ 
    "cangjie/decode.cj",
    "cangjie/flatbuffer_object.cj",
    "cangjie/table.cj",
  ]

  outputs = [ "${target_out_dir}/cangjie/{{source_file_part}}" ]
  part_name = "flatbuffers"
  subsystem_name = "thirdparty"
}